# sdl-space-shooter

./: .clang-format  .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/engine/geometry/: geometry.hpp  point.cpp  shape.cpp  vector.cpp
src/engine/manager/: game.cpp  game.hpp  handle.cpp  manage_objects.cpp  timeline.cpp  timeline.hpp
src/engine/object/: object.cpp  object.hpp
src/engine/object/bounding_box/: bounding_box.cpp  bounding_box.hpp  circle_box.cpp  rectangle_box.cpp
src/engine/physics/: dynamic.cpp  dynamic.hpp  motion.cpp  motion.hpp  physics.cpp  physics.hpp
src/engine/render/: color.cpp  color.hpp  renderer.cpp  renderer.hpp  texture.cpp  texture.hpp
src/game/: game.cpp  game.hpp  main.cpp
src/game/objects/: background.cpp  background.hpp  bullet.cpp  bullet.hpp  const.hpp  enemy.cpp  enemy.hpp  map.cpp  map.hpp  player.cpp  player.hpp  score.cpp  score.hpp  texture.cpp  texture.hpp  wall.cpp  wall.hpp
src/game/objects/character/: const.hpp  enemy.cpp  enemy.hpp  healthbar.cpp  healthbar.hpp  player.cpp  player.hpp
src/game/objects/env/: background.cpp  background.hpp  wall.cpp
src/game/timeline/: game_setup.cpp  game_setup.hpp  map_creator.cpp  map_creator.hpp  spawn_enemy.cpp  spawn_enemy.hpp
src/geometry/: geometry.cpp  geometry.hpp  point.cpp  shape.cpp  vector.cpp
src/number/: number.cpp  number.hpp
src/object/: object.cpp  object.hpp  object_factory.cpp
src/object/bounding_box/: bounding_box.cpp  bounding_box.hpp  circle_box.cpp  rectangle_box.cpp
src/object/display_box/: display_box.cpp  display_box.hpp
src/physics/: motion.cpp  motion.hpp
src/render/: color.cpp  color.hpp  renderer.cpp  renderer.hpp
src/utils/: compositor.cpp  number.cpp  number.hpp  random.cpp  random.hpp  timer.cpp  timer.hpp  utils.cpp  utils.hpp
src/utils/error/: error.cpp  error.hpp  sdl_error.cpp  sdl_error.hpp  ttf_error.cpp  ttf_error.hpp
src/utils/number/: number.hpp
